# camhack

./: CLAUDE.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_REPORT.md  LOCAL_TESTING_GUIDE.md  QUICK_START.md  README.md  deploy-all.sh
client/: CLAUDE.md  Cargo.toml
client/src/: main.rs
client/static/: index.html
client/static/assets/: index-DpReYLpB.css  index-DxgVOQ8Y.js
master/: CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.fixed  Dockerfile.temp  README.md  task-definition.json
master/scripts/: build.sh  deploy.sh  get-ip.sh
master/src/: main.rs
packet-royale-frontend/: .env  README.md  index.html  package-lock.json  package.json
packet-royale-frontend/src/: main.ts  style.css
packet-royale-frontend/src/adapters/: backendAdapter.ts  graphBackendAdapter.ts
packet-royale-frontend/src/config/: backend.ts  visualConstants.ts
packet-royale-frontend/src/scenes/: GameScene.ts  GraphGameScene.ts  LobbyScene.ts  UIScene.ts
packet-royale-frontend/src/services/: backendApi.ts  websocketService.ts
packet-royale-frontend/src/types/: gameTypes.ts  graphTypes.ts
packet-royale-frontend/src/utils/: dummyData.ts  graphData.ts  hexUtils.ts
worker/: CLAUDE.md  Cargo.toml  Dockerfile  RAFT_IMPLEMENTATION.md  README.md  task-definition-capital.json  task-definition.json
worker/.cargo/: config.toml
worker/proto/: raft.proto
worker/scripts/: build.sh  deploy.sh  get-ips.sh  scale.sh  teardown.sh
worker/src/: lib.rs  main.rs  metadata.rs  registry.rs
worker/src/game/: events.rs  finalkill.rs  grid.rs  logic.rs  mod.rs  network.rs  state.rs  udp.rs
worker/src/raft/: api.rs  conversions.rs  grpc_server.rs  mod.rs  network.rs  node_registry.rs  storage.rs
