[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Worker library provides shared Raft and game components
worker = { path = "../worker" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server for client API
axum = { version = "0.7", features = ["ws"] }

# WebSocket support for real-time updates
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio-tungstenite = "0.21"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation
rand = "0.8"

# HTTP client for making requests to master
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"

[profile.release]
# Optimize for size
opt-level = "z"
lto = true
codegen-units = 1
strip = true
