[package]
name = "master"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server framework
axum = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# AWS SDK for ECS
aws-config = "1.1"
aws-sdk-ecs = "1.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
# Optimize for size
opt-level = "z"
lto = true
codegen-units = 1
strip = true
