[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Raft consensus
openraft = { version = "0.9", features = ["serde"] }

# gRPC for Raft communication
tonic = "0.11"
prost = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# HTTP client for master communication
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# HTTP server for event API
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }

# WebSocket for attack system
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Error handling
anyhow = "1.0"

# Async trait support
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.11"

[profile.release]
# Optimize for size - smaller Docker images, faster container startup
opt-level = "z"
lto = true
codegen-units = 1
strip = true
